ply-3.8/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    IF
    FOR
    LAMBDA
    ELEM
    VOID
    IFF
    RETURN
    SQUOTE

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     program -> functions
Rule 3     program -> declarations functions
Rule 4     functions -> function
Rule 5     functions -> functions function
Rule 6     function -> FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY RCURLY
Rule 7     function -> FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations RCURLY
Rule 8     function -> FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations statements RCURLY
Rule 9     declarations -> type idList SEMI
Rule 10    declarations -> declarations type idList SEMI
Rule 11    declarations -> type idList EQUALS expression SEMI
Rule 12    declarations -> declarations type idList EQUALS expression SEMI
Rule 13    idList -> IDENTIFIER
Rule 14    idList -> IDENTIFIER COMMA idList
Rule 15    idList -> INTEGER
Rule 16    idList -> INTEGER COMMA idList
Rule 17    type -> INT
Rule 18    type -> FLOAT
Rule 19    type -> BOOL
Rule 20    type -> LIST
Rule 21    type -> TUPLE
Rule 22    type -> OBJECT
Rule 23    type -> STRING
Rule 24    statements -> statement
Rule 25    statements -> statements statement
Rule 26    statement -> expression SEMI
Rule 27    statement -> assignment SEMI
Rule 28    statement -> whileStatement
Rule 29    statement -> listStatement
Rule 30    statement -> streamStatement
Rule 31    statement -> arrayStatement
Rule 32    statement -> filterStatement
Rule 33    assignment -> LET IDENTIFIER EQUALS expression SEMI
Rule 34    whileStatement -> WHILE LPAREN expression RPAREN LCURLY statements RCURLY
Rule 35    listStatement -> LET IDENTIFIER EQUALS LBRACE idList RBRACE SEMI
Rule 36    listStatement -> LET IDENTIFIER EQUALS LBRACE RBRACE SEMI
Rule 37    filterStatement -> FILTER LCURLY LT_OP INTEGER GT_OP PRCNT INTEGER EQ_OP INTEGER RCURLY
Rule 38    streamStatement -> IDENTIFIER PIPE STREAM LPAREN RPAREN SEMI
Rule 39    arrayStatement -> LET IDENTIFIER EQUALS ARRAY LPAREN INTEGER OPEN_RNG INTEGER RPAREN PIPE filterStatement
Rule 40    expression -> conjunction
Rule 41    expression -> conjunction OR_OP expression
Rule 42    conjunction -> equality
Rule 43    conjunction -> AND_OP equality
Rule 44    equality -> relation
Rule 45    equality -> relation equOp equality
Rule 46    equOp -> EQ_OP
Rule 47    equOp -> NE_OP
Rule 48    relation -> addition
Rule 49    relation -> addition relOp relation
Rule 50    relOp -> LT_OP
Rule 51    relOp -> LE_OP
Rule 52    relOp -> GT_OP
Rule 53    relOp -> GE_OP
Rule 54    addition -> term
Rule 55    addition -> term addOP addition
Rule 56    addOP -> PLUS
Rule 57    addOP -> MINUS
Rule 58    term -> factor
Rule 59    term -> factor mulOP term
Rule 60    mulOP -> MULT
Rule 61    mulOP -> DIV
Rule 62    mulOP -> PRCNT
Rule 63    factor -> primary
Rule 64    factor -> primary unaryOP factor
Rule 65    unaryOP -> MINUS
Rule 66    unaryOP -> BANG
Rule 67    primary -> literal
Rule 68    literal -> INTEGER
Rule 69    literal -> IDENTIFIER
Rule 70    literal -> TRUE
Rule 71    literal -> FALSE
Rule 72    literal -> CLFLOAT
Rule 73    literal -> CLSTRING

Terminals, with rules where they appear

AND_OP               : 43
ARRAY                : 39
BANG                 : 66
BOOL                 : 19
CLFLOAT              : 72
CLSTRING             : 73
COMMA                : 14 16
DIV                  : 61
ELEM                 : 
ELSE                 : 
EQUALS               : 11 12 33 35 36 39
EQ_OP                : 37 46
FALSE                : 71
FILTER               : 37
FLOAT                : 18
FOR                  : 
FUNC                 : 6 7 8
GE_OP                : 53
GT_OP                : 37 52
IDENTIFIER           : 6 7 8 13 14 33 35 36 38 39 69
IF                   : 
IFF                  : 
INT                  : 17
INTEGER              : 15 16 37 37 37 39 39 68
LAMBDA               : 
LBRACE               : 35 36
LCURLY               : 6 7 8 34 37
LET                  : 33 35 36 39
LE_OP                : 51
LIST                 : 20
LPAREN               : 6 7 8 34 38 39
LT_OP                : 37 50
MAP_TO               : 6 7 8
MINUS                : 57 65
MULT                 : 60
NE_OP                : 47
OBJECT               : 22
OPEN_RNG             : 39
OR_OP                : 41
PIPE                 : 38 39
PLUS                 : 56
PRCNT                : 37 62
RBRACE               : 35 36
RCURLY               : 6 7 8 34 37
RETURN               : 
RPAREN               : 6 7 8 34 38 39
SEMI                 : 9 10 11 12 26 27 33 35 36 38
SQUOTE               : 
STREAM               : 38
STRING               : 23
TRUE                 : 70
TUPLE                : 21
VOID                 : 
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

addOP                : 55
addition             : 48 49 55
arrayStatement       : 31
assignment           : 27
conjunction          : 40 41
declarations         : 1 3 7 8 10 12
equOp                : 45
equality             : 42 43 45
expression           : 11 12 26 33 34 41
factor               : 58 59 64
filterStatement      : 32 39
function             : 4 5
functions            : 2 3 5
idList               : 9 10 11 12 14 16 35
listStatement        : 29
literal              : 67
mulOP                : 59
primary              : 63 64
program              : 0
relOp                : 49
relation             : 44 45 49
statement            : 24 25
statements           : 8 25 34
streamStatement      : 30
term                 : 54 55 59
type                 : 6 7 8 9 10 11 12
unaryOP              : 64
whileStatement       : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) program -> . functions
    (3) program -> . declarations functions
    (9) declarations -> . type idList SEMI
    (10) declarations -> . declarations type idList SEMI
    (11) declarations -> . type idList EQUALS expression SEMI
    (12) declarations -> . declarations type idList EQUALS expression SEMI
    (4) functions -> . function
    (5) functions -> . functions function
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . BOOL
    (20) type -> . LIST
    (21) type -> . TUPLE
    (22) type -> . OBJECT
    (23) type -> . STRING
    (6) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY RCURLY
    (7) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations RCURLY
    (8) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations statements RCURLY

    INT             shift and go to state 5
    FLOAT           shift and go to state 1
    BOOL            shift and go to state 11
    LIST            shift and go to state 13
    TUPLE           shift and go to state 10
    OBJECT          shift and go to state 8
    STRING          shift and go to state 12
    FUNC            shift and go to state 7

    functions                      shift and go to state 2
    program                        shift and go to state 3
    type                           shift and go to state 4
    declarations                   shift and go to state 9
    function                       shift and go to state 6

state 1

    (18) type -> FLOAT .

    LCURLY          reduce using rule 18 (type -> FLOAT .)
    IDENTIFIER      reduce using rule 18 (type -> FLOAT .)
    INTEGER         reduce using rule 18 (type -> FLOAT .)


state 2

    (2) program -> functions .
    (5) functions -> functions . function
    (6) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY RCURLY
    (7) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations RCURLY
    (8) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations statements RCURLY

    $end            reduce using rule 2 (program -> functions .)
    FUNC            shift and go to state 7

    function                       shift and go to state 14

state 3

    (0) S' -> program .



state 4

    (9) declarations -> type . idList SEMI
    (11) declarations -> type . idList EQUALS expression SEMI
    (13) idList -> . IDENTIFIER
    (14) idList -> . IDENTIFIER COMMA idList
    (15) idList -> . INTEGER
    (16) idList -> . INTEGER COMMA idList

    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 17

    idList                         shift and go to state 15

state 5

    (17) type -> INT .

    LCURLY          reduce using rule 17 (type -> INT .)
    IDENTIFIER      reduce using rule 17 (type -> INT .)
    INTEGER         reduce using rule 17 (type -> INT .)


state 6

    (4) functions -> function .

    FUNC            reduce using rule 4 (functions -> function .)
    $end            reduce using rule 4 (functions -> function .)


state 7

    (6) function -> FUNC . IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY RCURLY
    (7) function -> FUNC . IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations RCURLY
    (8) function -> FUNC . IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations statements RCURLY

    IDENTIFIER      shift and go to state 18


state 8

    (22) type -> OBJECT .

    LCURLY          reduce using rule 22 (type -> OBJECT .)
    IDENTIFIER      reduce using rule 22 (type -> OBJECT .)
    INTEGER         reduce using rule 22 (type -> OBJECT .)


state 9

    (1) program -> declarations .
    (3) program -> declarations . functions
    (10) declarations -> declarations . type idList SEMI
    (12) declarations -> declarations . type idList EQUALS expression SEMI
    (4) functions -> . function
    (5) functions -> . functions function
    (17) type -> . INT
    (18) type -> . FLOAT
    (19) type -> . BOOL
    (20) type -> . LIST
    (21) type -> . TUPLE
    (22) type -> . OBJECT
    (23) type -> . STRING
    (6) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY RCURLY
    (7) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations RCURLY
    (8) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations statements RCURLY

    $end            reduce using rule 1 (program -> declarations .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 1
    BOOL            shift and go to state 11
    LIST            shift and go to state 13
    TUPLE           shift and go to state 10
    OBJECT          shift and go to state 8
    STRING          shift and go to state 12
    FUNC            shift and go to state 7

    functions                      shift and go to state 19
    type                           shift and go to state 20
    function                       shift and go to state 6

state 10

    (21) type -> TUPLE .

    LCURLY          reduce using rule 21 (type -> TUPLE .)
    IDENTIFIER      reduce using rule 21 (type -> TUPLE .)
    INTEGER         reduce using rule 21 (type -> TUPLE .)


state 11

    (19) type -> BOOL .

    LCURLY          reduce using rule 19 (type -> BOOL .)
    IDENTIFIER      reduce using rule 19 (type -> BOOL .)
    INTEGER         reduce using rule 19 (type -> BOOL .)


state 12

    (23) type -> STRING .

    LCURLY          reduce using rule 23 (type -> STRING .)
    IDENTIFIER      reduce using rule 23 (type -> STRING .)
    INTEGER         reduce using rule 23 (type -> STRING .)


state 13

    (20) type -> LIST .

    LCURLY          reduce using rule 20 (type -> LIST .)
    IDENTIFIER      reduce using rule 20 (type -> LIST .)
    INTEGER         reduce using rule 20 (type -> LIST .)


state 14

    (5) functions -> functions function .

    FUNC            reduce using rule 5 (functions -> functions function .)
    $end            reduce using rule 5 (functions -> functions function .)


state 15

    (9) declarations -> type idList . SEMI
    (11) declarations -> type idList . EQUALS expression SEMI

    SEMI            shift and go to state 22
    EQUALS          shift and go to state 21


state 16

    (13) idList -> IDENTIFIER .
    (14) idList -> IDENTIFIER . COMMA idList

    SEMI            reduce using rule 13 (idList -> IDENTIFIER .)
    EQUALS          reduce using rule 13 (idList -> IDENTIFIER .)
    RBRACE          reduce using rule 13 (idList -> IDENTIFIER .)
    COMMA           shift and go to state 23


state 17

    (15) idList -> INTEGER .
    (16) idList -> INTEGER . COMMA idList

    SEMI            reduce using rule 15 (idList -> INTEGER .)
    EQUALS          reduce using rule 15 (idList -> INTEGER .)
    RBRACE          reduce using rule 15 (idList -> INTEGER .)
    COMMA           shift and go to state 24


state 18

    (6) function -> FUNC IDENTIFIER . LPAREN RPAREN MAP_TO type LCURLY RCURLY
    (7) function -> FUNC IDENTIFIER . LPAREN RPAREN MAP_TO type LCURLY declarations RCURLY
    (8) function -> FUNC IDENTIFIER . LPAREN RPAREN MAP_TO type LCURLY declarations statements RCURLY

    LPAREN          shift and go to state 25


state 19

    (3) program -> declarations functions .
    (5) functions -> functions . function
    (6) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY RCURLY
    (7) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations RCURLY
    (8) function -> . FUNC IDENTIFIER LPAREN RPAREN MAP_TO type LCURLY declarations statements RCURLY

    $end            reduce using rule 3 (program -> declarations functions .)
    FUNC            shift and go to state 7

    function                       shift and go to state 14

state 20

    (10) declarations -> declarations type . idList SEMI
    (12) declarations -> declarations type . idList EQUALS expression SEMI
    (13) idList -> . IDENTIFIER
    (14) idList -> . IDENTIFIER COMMA idList
    (15) idList -> . INTEGER
    (16) idList -> . INTEGER COMMA idList

    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 17

    idList                         shift and go to state 26

state 21

    (11) declarations -> type idList EQUALS . expression SEMI
    (40) expression -> . conjunction
    (41) expression -> . conjunction OR_OP expression
    (42) conjunction -> . equality
    (43) conjunction -> . AND_OP equality
    (44) equality -> . relation
    (45) equality -> . relation equOp equality
    (48) relation -> . addition
    (49) relation -> . addition relOp relation
    (54) addition -> . term
    (55) addition -> . term addOP addition
    (58) term -> . factor
    (59) term -> . factor mulOP term
    (63) factor -> . primary
    (64) factor -> . primary unaryOP factor
    (67) primary -> . literal
    (68) literal -> . INTEGER
    (69) literal -> . IDENTIFIER
    (70) literal -> . TRUE
    (71) literal -> . FALSE
    (72) literal -> . CLFLOAT
    (73) literal -> . CLSTRING

    AND_OP          shift and go to state 42
    INTEGER         shift and go to state 37
    IDENTIFIER      shift and go to state 32
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40
    CLFLOAT         shift and go to state 34
    CLSTRING        shift and go to state 27

    expression                     shift and go to state 38
    relation                       shift and go to state 28
    literal                        shift and go to state 29
    conjunction                    shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 33
    equality                       shift and go to state 35
    addition                       shift and go to state 36
    primary                        shift and go to state 41

state 22

    (9) declarations -> type idList SEMI .

    INT             reduce using rule 9 (declarations -> type idList SEMI .)
    FLOAT           reduce using rule 9 (declarations -> type idList SEMI .)
    BOOL            reduce using rule 9 (declarations -> type idList SEMI .)
    LIST            reduce using rule 9 (declarations -> type idList SEMI .)
    TUPLE           reduce using rule 9 (declarations -> type idList SEMI .)
    OBJECT          reduce using rule 9 (declarations -> type idList SEMI .)
    STRING          reduce using rule 9 (declarations -> type idList SEMI .)
    FUNC            reduce using rule 9 (declarations -> type idList SEMI .)
    $end            reduce using rule 9 (declarations -> type idList SEMI .)
    RCURLY          reduce using rule 9 (declarations -> type idList SEMI .)
    LET             reduce using rule 9 (declarations -> type idList SEMI .)
    WHILE           reduce using rule 9 (declarations -> type idList SEMI .)
    IDENTIFIER      reduce using rule 9 (declarations -> type idList SEMI .)
    FILTER          reduce using rule 9 (declarations -> type idList SEMI .)
    AND_OP          reduce using rule 9 (declarations -> type idList SEMI .)
    INTEGER         reduce using rule 9 (declarations -> type idList SEMI .)
    TRUE            reduce using rule 9 (declarations -> type idList SEMI .)
    FALSE           reduce using rule 9 (declarations -> type idList SEMI .)
    CLFLOAT         reduce using rule 9 (declarations -> type idList SEMI .)
    CLSTRING        reduce using rule 9 (declarations -> type idList SEMI .)


state 23

    (14) idList -> IDENTIFIER COMMA . idList
    (13) idList -> . IDENTIFIER
    (14) idList -> . IDENTIFIER COMMA idList
    (15) idList -> . INTEGER
    (16) idList -> . INTEGER COMMA idList

    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 17

    idList                         shift and go to state 43

state 24

    (16) idList -> INTEGER COMMA . idList
    (13) idList -> . IDENTIFIER
    (14) idList -> . IDENTIFIER COMMA idList
    (15) idList -> . INTEGER
    (16) idList -> . INTEGER COMMA idList

    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 17

    idList                         shift and go to state 44

state 25

    (6) function -> FUNC IDENTIFIER LPAREN . RPAREN MAP_TO type LCURLY RCURLY
    (7) function -> FUNC IDENTIFIER LPAREN . RPAREN MAP_TO type LCURLY declarations RCURLY
    (8) function -> FUNC IDENTIFIER LPAREN . RPAREN MAP_TO type LCURLY declarations statements RCURLY

    RPAREN          shift and go to state 45


state 26

    (10) declarations -> declarations type idList . SEMI
    (12) declarations -> declarations type idList . EQUALS expression SEMI

    SEMI            shift and go to state 47
    EQUALS          shift and go to state 46


state 27

    (73) literal -> CLSTRING .

    MINUS           reduce using rule 73 (literal -> CLSTRING .)
    BANG            reduce using rule 73 (literal -> CLSTRING .)
    MULT            reduce using rule 73 (literal -> CLSTRING .)
    DIV             reduce using rule 73 (literal -> CLSTRING .)
    PRCNT           reduce using rule 73 (literal -> CLSTRING .)
    PLUS            reduce using rule 73 (literal -> CLSTRING .)
    LT_OP           reduce using rule 73 (literal -> CLSTRING .)
    LE_OP           reduce using rule 73 (literal -> CLSTRING .)
    GT_OP           reduce using rule 73 (literal -> CLSTRING .)
    GE_OP           reduce using rule 73 (literal -> CLSTRING .)
    EQ_OP           reduce using rule 73 (literal -> CLSTRING .)
    NE_OP           reduce using rule 73 (literal -> CLSTRING .)
    OR_OP           reduce using rule 73 (literal -> CLSTRING .)
    SEMI            reduce using rule 73 (literal -> CLSTRING .)
    RPAREN          reduce using rule 73 (literal -> CLSTRING .)


state 28

    (44) equality -> relation .
    (45) equality -> relation . equOp equality
    (46) equOp -> . EQ_OP
    (47) equOp -> . NE_OP

    OR_OP           reduce using rule 44 (equality -> relation .)
    SEMI            reduce using rule 44 (equality -> relation .)
    RPAREN          reduce using rule 44 (equality -> relation .)
    EQ_OP           shift and go to state 49
    NE_OP           shift and go to state 48

    equOp                          shift and go to state 50

state 29

    (67) primary -> literal .

    MINUS           reduce using rule 67 (primary -> literal .)
    BANG            reduce using rule 67 (primary -> literal .)
    MULT            reduce using rule 67 (primary -> literal .)
    DIV             reduce using rule 67 (primary -> literal .)
    PRCNT           reduce using rule 67 (primary -> literal .)
    PLUS            reduce using rule 67 (primary -> literal .)
    LT_OP           reduce using rule 67 (primary -> literal .)
    LE_OP           reduce using rule 67 (primary -> literal .)
    GT_OP           reduce using rule 67 (primary -> literal .)
    GE_OP           reduce using rule 67 (primary -> literal .)
    EQ_OP           reduce using rule 67 (primary -> literal .)
    NE_OP           reduce using rule 67 (primary -> literal .)
    OR_OP           reduce using rule 67 (primary -> literal .)
    SEMI            reduce using rule 67 (primary -> literal .)
    RPAREN          reduce using rule 67 (primary -> literal .)


state 30

    (40) expression -> conjunction .
    (41) expression -> conjunction . OR_OP expression

    SEMI            reduce using rule 40 (expression -> conjunction .)
    RPAREN          reduce using rule 40 (expression -> conjunction .)
    OR_OP           shift and go to state 51


state 31

    (54) addition -> term .
    (55) addition -> term . addOP addition
    (56) addOP -> . PLUS
    (57) addOP -> . MINUS

    LT_OP           reduce using rule 54 (addition -> term .)
    LE_OP           reduce using rule 54 (addition -> term .)
    GT_OP           reduce using rule 54 (addition -> term .)
    GE_OP           reduce using rule 54 (addition -> term .)
    EQ_OP           reduce using rule 54 (addition -> term .)
    NE_OP           reduce using rule 54 (addition -> term .)
    OR_OP           reduce using rule 54 (addition -> term .)
    SEMI            reduce using rule 54 (addition -> term .)
    RPAREN          reduce using rule 54 (addition -> term .)
    PLUS            shift and go to state 54
    MINUS           shift and go to state 53

    addOP                          shift and go to state 52

state 32

    (69) literal -> IDENTIFIER .

    MINUS           reduce using rule 69 (literal -> IDENTIFIER .)
    BANG            reduce using rule 69 (literal -> IDENTIFIER .)
    MULT            reduce using rule 69 (literal -> IDENTIFIER .)
    DIV             reduce using rule 69 (literal -> IDENTIFIER .)
    PRCNT           reduce using rule 69 (literal -> IDENTIFIER .)
    PLUS            reduce using rule 69 (literal -> IDENTIFIER .)
    LT_OP           reduce using rule 69 (literal -> IDENTIFIER .)
    LE_OP           reduce using rule 69 (literal -> IDENTIFIER .)
    GT_OP           reduce using rule 69 (literal -> IDENTIFIER .)
    GE_OP           reduce using rule 69 (literal -> IDENTIFIER .)
    EQ_OP           reduce using rule 69 (literal -> IDENTIFIER .)
    NE_OP           reduce using rule 69 (literal -> IDENTIFIER .)
    OR_OP           reduce using rule 69 (literal -> IDENTIFIER .)
    SEMI            reduce using rule 69 (literal -> IDENTIFIER .)
    RPAREN          reduce using rule 69 (literal -> IDENTIFIER .)


state 33

    (58) term -> factor .
    (59) term -> factor . mulOP term
    (60) mulOP -> . MULT
    (61) mulOP -> . DIV
    (62) mulOP -> . PRCNT

    PLUS            reduce using rule 58 (term -> factor .)
    MINUS           reduce using rule 58 (term -> factor .)
    LT_OP           reduce using rule 58 (term -> factor .)
    LE_OP           reduce using rule 58 (term -> factor .)
    GT_OP           reduce using rule 58 (term -> factor .)
    GE_OP           reduce using rule 58 (term -> factor .)
    EQ_OP           reduce using rule 58 (term -> factor .)
    NE_OP           reduce using rule 58 (term -> factor .)
    OR_OP           reduce using rule 58 (term -> factor .)
    SEMI            reduce using rule 58 (term -> factor .)
    RPAREN          reduce using rule 58 (term -> factor .)
    MULT            shift and go to state 58
    DIV             shift and go to state 56
    PRCNT           shift and go to state 55

    mulOP                          shift and go to state 57

state 34

    (72) literal -> CLFLOAT .

    MINUS           reduce using rule 72 (literal -> CLFLOAT .)
    BANG            reduce using rule 72 (literal -> CLFLOAT .)
    MULT            reduce using rule 72 (literal -> CLFLOAT .)
    DIV             reduce using rule 72 (literal -> CLFLOAT .)
    PRCNT           reduce using rule 72 (literal -> CLFLOAT .)
    PLUS            reduce using rule 72 (literal -> CLFLOAT .)
    LT_OP           reduce using rule 72 (literal -> CLFLOAT .)
    LE_OP           reduce using rule 72 (literal -> CLFLOAT .)
    GT_OP           reduce using rule 72 (literal -> CLFLOAT .)
    GE_OP           reduce using rule 72 (literal -> CLFLOAT .)
    EQ_OP           reduce using rule 72 (literal -> CLFLOAT .)
    NE_OP           reduce using rule 72 (literal -> CLFLOAT .)
    OR_OP           reduce using rule 72 (literal -> CLFLOAT .)
    SEMI            reduce using rule 72 (literal -> CLFLOAT .)
    RPAREN          reduce using rule 72 (literal -> CLFLOAT .)


state 35

    (42) conjunction -> equality .

    OR_OP           reduce using rule 42 (conjunction -> equality .)
    SEMI            reduce using rule 42 (conjunction -> equality .)
    RPAREN          reduce using rule 42 (conjunction -> equality .)


state 36
